frostwire (6.14.1) stable; urgency=high
 * New TorrentCSV search performer
 * MacEventHandler is now compatible with JDK 23 and JDK 24
 * New: Settings panel to pick location for .torrent files
 * Crash: Fix NPE in MultilineToolTip.updateUI() when switching from Synth L&F
 * Fixed Archive.org search
 * New: Strict EDT Mode to catch long running tasks stalling event dispatch thread

 -- FrostWire Team <contact@frostwire.com>  Sat, 6 Sep 2025 09:24:00 -0600

frostwire (6.14.0) stable; urgency=high
 * Telluride Video Downloader build 38
 * Filter out search results with no keyword matches, considers fuzzy matches
 * New app_splash image
 * FrostWire 6.14.0 build 326
 * Make download button on slide panel transparent
 * Black background behind author on slide controls overlay
 * Don't paint search tabbed pane background on default theme either
 * Settings button on status bar (StatusLine) now looks good
 * Dark theme fixes for delete files dialog
 * Dark theme for search tab headers, refactor checking what theme is on
 * Robust runtime theme switch & readable dialogs in FlatLaf dark mode
 * Ignore some exceptions while updating window hierarchy on theme change
 * General UI cleanup
 * Background color for main searchboxes fixed when focused
 * Refine dark theme UI, panel and textfield backgrounds darker
 * Icon brightening support and clean-up sweep
 * LibraryExplorer Tree background is darker for dark theme, speaker icon is brightened
 * TransferDetailGeneral: support dark theme backgrounds and text
 * Make transfer-detail pieces & tables use dark theme background
 * Dark theme: unify table, panel and toggle-button backgrounds
 * Actions for transfers, library and search had icons brightened in dark mode
 * Transfer seeding renderer icon brightened for dark mode
 * Enhanced icon repainting capabilities for dark mode
 * ThemeMediator: Improved handling of table row alternate colors