@@ -5,6 +5,7 @@ frostwire (6.14.1) stable; urgency=high
  * Crash: Fix NPE in MultilineToolTip.updateUI() when switching from Synth L&F
  * Fixed Archive.org search
  * New: Strict EDT Mode to catch long running tasks stalling event dispatch thread
+ * EDT freeze: Move media checks off EDT; coalesce selection; add EDT I/O guard	
 
  -- FrostWire Team <contact@frostwire.com>  Sat, 6 Sep 2025 09:24:00 -0600
 
